Stylesheet/emote/tag updates 2013-01-20

--- a/source-css/arborus.css
+++ b/source-css/arborus.css
@@ -100,13 +100,7 @@ a[href|="/angryfrog"] {
     }
 
 
-a[href|="/doeshelooklikeabitch"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 178px;
-    height: 269px;
-    background-image: url(%%sljemote%%) }
+
 
 a[href|="/stairmaster"] {
     display: block;
@@ -116,13 +110,7 @@ a[href|="/stairmaster"] {
     height: 392px;
     background-image: url(%%stairmaster%%) }
 
-a[href|="/xmasscratch"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 200px;
-    height: 227px;
-    background-image: url(%%vinylxmasemote%%) }
+
 
 a[href|="/st3rox"] {
     display: block;
@@ -140,21 +128,9 @@ a[href|="/needsmoarsleep"] {
     height: 200px;
     background-image: url(%%scootasleep%%) }
 
-a[href|="/qcmeme"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 204px;
-    height: 300px;
-    background-image: url(%%qcmeme%%) }
 
-a[href|="/somuchlove"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 200px;
-    height: 200px;
-    background-image: url(%%somuchlove%%) }
+
+
 
 a[href|="/qcshit"] {
     display: block;
@@ -188,13 +164,7 @@ a[href|="/q0"] {
     height: 479px;
     background-image: url(%%q0%%) }
 
-a[href|="/blueshiftsealofapproval"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 200px;
-    height: 200px;
-    background-image: url(%%blueshiftsealofapproval%%) }
+
 
 a[href|="/lavender"] {
     display: block;
@@ -228,37 +198,12 @@ a[href|="/dyew"] {
     height: 193px;
     background-image: url(%%douevnwub%%) }
 
-a[href|="/scratchout"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 126px;
-    height: 200px;
-    background-image: url(%%scratchmote1%%) }
 
-a[href|="/madmeansealofapproval"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 200px;
-    height: 200px;
-    background-image: url(%%APPROVED%%) }
 
-a[href|="/areyoufuckingkiddingme"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 200px;
-    height: 198px;
-    background-image: url(%%areyoufuckingkiddingme%%) }
 
-a[href|="/creepypie"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 194px;
-    height: 200px;
-    background-image: url(%%creepypie%%) }
+
+
+
 
 a[href|="/bestpony"] {
     display: block;
@@ -268,29 +213,10 @@ a[href|="/bestpony"] {
     height: 250px;
     background-image: url(%%dJkY5%%) }
 
-a[href|="/itspartytime"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 200px;
-    height: 174px;
-    background-image: url(%%itspartytime%%) }
 
-a[href|="/lyredrink"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 158px;
-    height: 200px;
-    background-image: url(%%lyredrink%%) }
 
-a[href|="/chakolatechip"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 200px;
-    height: 200px;
-    background-image: url(%%chakolatechip%%) }
+
+
 
 a[href|="/creepylis"] {
     display: block;
@@ -427,3 +353,67 @@ a[href|="/qcgala"] {
     width: 273px;
     height: 300px;
     background-image: url(%%qcgala%%) }
+
+a[href|="/areyoufuckingkiddingme"], a[href|="/creepypie"], a[href|="/itspartytime"], a[href|="/scratchout"], a[href|="/lyredrink"], a[href|="/chakolatechip"], a[href|="/babbychris"], a[href|="/blueshiftsealofapproval"], a[href|="/xmasscratch"], a[href|="/qcmeme"], a[href|="/somuchlove"], a[href|="/doeshelooklikeabitch"], a[href|="/st3rox"], a[href|="/madmeansealofapproval"], a[href|="/tentenwouldmarmshat"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 200px;
+    background-image: url(%%emotesheet1%%)
+}
+a[href|="/areyoufuckingkiddingme"] {
+    background-position: -0px -0px
+    }
+
+a[href|="/creepypie"] {
+    background-position: -200px -0px
+    }
+
+a[href|="/itspartytime"] {
+    background-position: -400px -0px
+    }
+
+a[href|="/scratchout"] {
+    background-position: -600px -0px
+    }
+
+a[href|="/lyredrink"] {
+    background-position: -800px -0px
+    }
+
+a[href|="/chakolatechip"] {
+    background-position: -1000px -0px
+    }
+
+a[href|="/babbychris"] {
+    background-position: -200px -200px
+    }
+
+a[href|="/blueshiftsealofapproval"] {
+    background-position: -400px -200px
+    }
+
+a[href|="/xmasscratch"] {
+    background-position: -600px -200px
+    }
+
+a[href|="/qcmeme"] {
+    background-position: -800px -200px
+    }
+
+a[href|="/somuchlove"] {
+    background-position: -1000px -200px
+    }
+
+a[href|="/doeshelooklikeabitch"] {
+    background-position: -200px -400px
+    }
+
+a[href|="/st3rox"] {
+    background-position: -400px -400px
+    }
+
+a[href|="/madmeansealofapproval"] {
+    background-position: -600px -400px
+    }
