--- a/source-css/himntor.css
+++ b/source-css/himntor.css
@@ -124,3 +124,30 @@ a[href|="/agentp"] {
     height: 97px;
     background-image: url(%%agentp%%)
     }
+
+a[href|="/perry"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 68px;
+    background-image: url(%%perry%%)
+    }
+
+a[href|="/doofenshmirtz"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 40px;
+    height: 90px;
+    background-image: url(%%doofenshmirtz%%)
+    }
+
+a[href|="/thedoof"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 160px;
+    height: 200px;
+    background-image: url(%%thedoof%%)
+    }
