--- a/source-css/mlas1emotes.css
+++ b/source-css/mlas1emotes.css
@@ -107,7 +107,7 @@ a[href|='/vsguitar'] {width:97px; height:152px; background-position: -302px -982
 a[href|='/yourhorn'] {width:202px; height:116px; background-position: -103px -866px}
 
 
-a[href|='/ajcute'], a[href|='/ajsmile'], a[href|='/ajsmug'], a[href|='/bonbonlyra'], a[href|='/bonbonlyra2'], a[href|='/cake'], a[href|='/carrotfun'], a[href|='/carrottopfun'], a[href|='/cerealpie'], a[href|='/rcerealpie'], a[href|='/crossfire'], a[href|='/rcrossfire'], a[href|='/dashwithit'], a[href|='/dramaqueen'], a[href|='/eng'], a[href|='/flutterdash'], a[href|='/gummy'], a[href|='/heavy'], a[href|='/crunchy'], a[href|='/lunam'], a[href|='/flunam'], a[href|='/lush'], a[href|='/lyou'], a[href|='/pinkwithit'], a[href|='/ppfly'], a[href|='/ppforever'], a[href|='/ppfrown'], a[href|='/ppmoney'], a[href|='/ppstache'], a[href|='/pptoot'], a[href|='/rdsax'], a[href|='/rdwhat'], a[href|='/sbevil'], a[href|='/twiflip'], a[href|='/twitrix'], a[href|='/w40'] {
+a[href|='/ajcute'], a[href|='/ajsmile'], a[href|='/ajsmug'], a[href|='/bonbonlyra'], a[href|='/bonbonlyra2'], a[href|='/cake'], a[href|='/carrotfun'], a[href|='/carrottopfun'], a[href|='/cerealpie'], a[href|='/rcerealpie'], a[href|='/crossfire'], a[href|='/rcrossfire'], a[href|='/dashwithit'], a[href|='/dramaqueen'], a[href|='/eng'], a[href|='/flutterdash'], a[href|='/gummy'], a[href|='/heavy'], a[href|='/crunchy'], a[href|='/lunam'], a[href|='/flunam'], a[href|='/lush'], a[href|='/lyou'], a[href|='/pinkwithit'], a[href|='/ppfly'], a[href|='/ppforever'], a[href|='/ppfrown'], a[href|='/ppmoney'], a[href|='/ppstache'], a[href|='/pptoot'], a[href|='/rdsax'], a[href|='/rdwhat'], a[href|='/sbevil'], a[href|='/twiflip'], a[href|='/twitrix'], a[href|='/w40'],a[href|='/minashrug'] {
     display: block;
     clear: none;
     float: left;
@@ -144,7 +144,7 @@ a[href|='/rdwhat'] {width:121px; height:127px; background-position: -0px -1819px
 a[href|='/sbevil'] {width:90px; height:102px; background-position: -172px -1212px}
 a[href|='/twiflip'] {width:200px; height:135px; background-position: -0px -888px}
 a[href|='/twitrix'] {width:102px; height:91px; background-position: -0px -2214px}
-a[href|='/w40'] {width:72px; height:70px; background-position: -187px -2214px}
+a[href|='/w40'],a[href|='/minashrug'] {width:72px; height:70px; background-position: -187px -2214px}
 
 
 a[href|='/ch00'], a[href|='/ch01'], a[href|='/ch02'], a[href|='/ch03'], a[href|='/ch10'], a[href|='/ch11'], a[href|='/ch12'], a[href|='/ch20'], a[href|='/ch21'], a[href|='/ch22'], a[href|='/ch25'], a[href|='/ch30'], a[href|='/ch31'], a[href|='/ch32'], a[href|='/fscrazy'], a[href|='/griffinafuck'], a[href|='/gryphonafuck'], a[href|='/giffonafuck'], a[href|='/timgaf'], a[href|='/jackwithit'], a[href|='/ppahh'], a[href|='/rarwithit'], a[href|='/scootie'], a[href|='/shywithit'], a[href|='/sparklewithit'], a[href|='/spitfuck'], a[href|='/twino'] {
@@ -289,7 +289,7 @@ a[href|='/ww31'] {width:108px; height:102px; background-position: -113px -1976px
 a[href|='/yes'] {width:223px; height:202px; background-position: -0px -0px}
 
 
-a[href|='/fscute'], a[href|='/ppohyou'], a[href|='/rdcute'], a[href|='/v00'], a[href|='/v01'], a[href|='/v02'], a[href|='/v03'], a[href|='/v10'], a[href|='/v11'], a[href|='/v12'], a[href|='/v13'], a[href|='/v20'], a[href|='/v21'], a[href|='/v22'], a[href|='/v23'], a[href|='/v30'], a[href|='/v31'], a[href|='/v32'], a[href|='/v33'], a[href|='/v40'], a[href|='/v41'], a[href|='/v42'], a[href|='/v43'], a[href|='/w00'], a[href|='/w01'], a[href|='/w02'], a[href|='/w03'], a[href|='/w04'], a[href|='/w10'], a[href|='/w11'], a[href|='/w12'], a[href|='/w13'], a[href|='/w14'], a[href|='/w20'], a[href|='/w21'], a[href|='/w22'], a[href|='/w23'], a[href|='/w24'], a[href|='/w30'], a[href|='/w31'], a[href|='/w32'], a[href|='/w33'], a[href|='/w34'], a[href|='/x00'], a[href|='/x01'], a[href|='/x02'], a[href|='/x03'], a[href|='/x04'], a[href|='/x10'], a[href|='/x11'], a[href|='/x12'], a[href|='/x13'], a[href|='/x14'], a[href|='/x20'], a[href|='/x21'], a[href|='/x22'], a[href|='/x23'], a[href|='/x24'], a[href|='/x30'], a[href|='/x31'], a[href|='/x32'], a[href|='/x33'], a[href|='/x34'], a[href|='/x40'], a[href|='/x41'], a[href|='/x42'], a[href|='/x43'], a[href|='/x44'], a[href|='/zz00'], a[href|='/zz01'], a[href|='/zz02'], a[href|='/zz03'], a[href|='/zz10'] {
+a[href|='/fscute'], a[href|='/ppohyou'], a[href|='/rdcute'], a[href|='/v00'], a[href|='/v01'], a[href|='/v02'], a[href|='/v03'], a[href|='/v10'], a[href|='/v11'], a[href|='/v12'], a[href|='/v13'], a[href|='/v20'], a[href|='/v21'], a[href|='/v22'], a[href|='/v23'], a[href|='/v30'], a[href|='/v31'], a[href|='/v32'], a[href|='/v33'], a[href|='/v40'], a[href|='/v41'], a[href|='/v42'], a[href|='/v43'], a[href|='/w00'], a[href|='/w01'], a[href|='/w02'], a[href|='/w03'], a[href|='/w04'], a[href|='/w10'], a[href|='/w11'], a[href|='/w12'], a[href|='/w13'], a[href|='/w14'], a[href|='/w20'], a[href|='/w21'], a[href|='/w22'], a[href|='/w23'], a[href|='/w24'], a[href|='/w30'], a[href|='/w31'], a[href|='/w32'], a[href|='/w33'], a[href|='/w34'], a[href|='/x00'], a[href|='/x01'], a[href|='/x02'], a[href|='/x03'], a[href|='/x04'], a[href|='/x10'], a[href|='/x11'], a[href|='/x12'], a[href|='/x13'], a[href|='/x14'], a[href|='/x20'], a[href|='/x21'], a[href|='/x22'], a[href|='/x23'], a[href|='/x24'], a[href|='/x30'], a[href|='/x31'], a[href|='/x32'], a[href|='/x33'], a[href|='/x34'], a[href|='/x40'], a[href|='/x41'], a[href|='/x42'], a[href|='/x43'], a[href|='/x44'], a[href|='/zz00'], a[href|='/zz01'], a[href|='/zz02'], a[href|='/zz03'], a[href|='/zz10'], a[href|='/dashshrug'],  a[href|='/twishrug'], a[href|='/ajshrug'],a[href|='/fsshrug'],a[href|='/rarshrug'],a[href|='/sfshrug'],a[href|='/spikeshrug'],a[href|='/guardshrug'],a[href|='/bmshrug'],a[href|='/tiashrug'],a[href|='/scootashrug'],a[href|='/sbshrug'],a[href|='/octshrug'],a[href|='/bonshrug'],a[href|='/nmmshrug'],a[href|='/roseshrug'],a[href|='/abshrug'],a[href|='/pon3shrug'],a[href|='/lyrashrug'],a[href|='/lunashrug']{
     display: block;
     clear: none;
     float: left;
@@ -319,26 +319,26 @@ a[href|='/v40'] {width:62px; height:70px; background-position: -0px -3336px}
 a[href|='/v41'] {width:58px; height:72px; background-position: -0px -2416px}
 a[href|='/v42'] {width:64px; height:72px; background-position: -0px -1912px}
 a[href|='/v43'] {width:72px; height:70px; background-position: -0px -2986px}
-a[href|='/w00'] {width:68px; height:66px; background-position: -0px -4760px}
-a[href|='/w01'] {width:72px; height:70px; background-position: -0px -2916px}
-a[href|='/w02'] {width:72px; height:72px; background-position: -0px -904px}
-a[href|='/w03'] {width:68px; height:68px; background-position: -0px -4162px}
-a[href|='/w04'] {width:68px; height:70px; background-position: -0px -3126px}
-a[href|='/w10'] {width:72px; height:72px; background-position: -0px -832px}
-a[href|='/w11'] {width:68px; height:68px; background-position: -0px -4094px}
-a[href|='/w12'] {width:72px; height:72px; background-position: -0px -760px}
-a[href|='/w13'] {width:68px; height:68px; background-position: -0px -4026px}
-a[href|='/w14'] {width:66px; height:70px; background-position: -0px -3196px}
-a[href|='/w20'] {width:68px; height:66px; background-position: -0px -4694px}
-a[href|='/w21'] {width:68px; height:70px; background-position: -0px -3056px}
-a[href|='/w22'] {width:68px; height:66px; background-position: -0px -4628px}
-a[href|='/w23'] {width:68px; height:66px; background-position: -0px -4562px}
-a[href|='/w24'] {width:70px; height:66px; background-position: -0px -4364px}
-a[href|='/w30'] {width:68px; height:66px; background-position: -0px -4496px}
-a[href|='/w31'] {width:66px; height:66px; background-position: -0px -4826px}
-a[href|='/w32'] {width:68px; height:68px; background-position: -0px -3958px}
-a[href|='/w33'] {width:72px; height:68px; background-position: -0px -3686px}
-a[href|='/w34'] {width:68px; height:66px; background-position: -0px -4430px}
+a[href|='/w00'], a[href|='/dashshrug'] {width:68px; height:66px; background-position: -0px -4760px}
+a[href|='/w01'], a[href|='/twishrug'] {width:72px; height:70px; background-position: -0px -2916px}
+a[href|='/w02'], a[href|='/ajshrug'] {width:72px; height:72px; background-position: -0px -904px}
+a[href|='/w03'],a[href|='/fsshrug'] {width:68px; height:68px; background-position: -0px -4162px}
+a[href|='/w04'],a[href|='/rarshrug'] {width:68px; height:70px; background-position: -0px -3126px}
+a[href|='/w10'],a[href|='/sfshrug'] {width:72px; height:72px; background-position: -0px -832px}
+a[href|='/w11'],a[href|='/spikeshrug'] {width:68px; height:68px; background-position: -0px -4094px}
+a[href|='/w12'],a[href|='/guardshrug'] {width:72px; height:72px; background-position: -0px -760px}
+a[href|='/w13'],a[href|='/bmshrug'] {width:68px; height:68px; background-position: -0px -4026px}
+a[href|='/w14'],a[href|='/tiashrug'] {width:66px; height:70px; background-position: -0px -3196px}
+a[href|='/w20'],a[href|='/scootashrug'] {width:68px; height:66px; background-position: -0px -4694px}
+a[href|='/w21'],a[href|='/sbshrug'] {width:68px; height:70px; background-position: -0px -3056px}
+a[href|='/w22'],a[href|='/octshrug'] {width:68px; height:66px; background-position: -0px -4628px}
+a[href|='/w23'],a[href|='/bonshrug'] {width:68px; height:66px; background-position: -0px -4562px}
+a[href|='/w24'],a[href|='/nmmshrug'] {width:70px; height:66px; background-position: -0px -4364px}
+a[href|='/w30'],a[href|='/roseshrug'] {width:68px; height:66px; background-position: -0px -4496px}
+a[href|='/w31'],a[href|='/abshrug'] {width:66px; height:66px; background-position: -0px -4826px}
+a[href|='/w32'],a[href|='/pon3shrug'] {width:68px; height:68px; background-position: -0px -3958px}
+a[href|='/w33'],a[href|='/lyrashrug']{width:72px; height:68px; background-position: -0px -3686px}
+a[href|='/w34'],a[href|='/lunashrug']  {width:68px; height:66px; background-position: -0px -4430px}
 a[href|='/x00'] {width:64px; height:72px; background-position: -0px -1840px}
 a[href|='/x01'] {width:68px; height:72px; background-position: -0px -1480px}
 a[href|='/x02'] {width:68px; height:72px; background-position: -0px -1408px}
