--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -340,3 +340,6 @@ body.res-nightmode:first-of-type .flair { background-color: transparent!importan
 .flair-b24 {background-image: url(%%b24%%); width:30px; height:30px}
 .flair-cap {background-image: url(%%capflair%%); width:30px; height:28px}
 .flair-bed {background-image: url(%%bedflair%%); width:30px; height:19px}
+.flair-ass {background-image: url(%%assflair%%); width:26px; height:30px}
+.flair-penis {background-image: url(%%apenisflair%%); width:47px; height:10px}
+
