--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -394,6 +394,8 @@ background-repeat: no-repeat;
 .flair-HtotheGRIFF:after { background-position: 0px -4020px }
 .flair-StabbyTheLlama:after { background-position: 0px -4050px }
 .flair-CustomOriginal:after { background-position: 0px -4080px }
+.flair-tsyuan:after { background-position: 0px -4110px }
+.flair-Unsinkablesam:after { background-position: 0px -4140px }
 
 /* Nightmode fix for flair */
 body.res-nightmode:first-of-type .flair { background-color: transparent!important; }
@@ -914,7 +916,7 @@ a.author[href$=scriptea],
 a.author[href$=QdwachMD],
 a.author[href$=SirCinnamon],
 a.author[href$=Boibi],
-a.author[href$=CatmanIX],
+a.author[href$=nekoningen],
 a.author[href$=XelNaga],
 a.author[href$=Catharsis25],
 a.author[href$=tehz],
@@ -1003,7 +1005,7 @@ a.author[href$=QdwachMD]:before,
 a.author[href$=SirCinnamon]:before,
 a.author[href$=BlockJuice_4]:before,
 a.author[href$=Boibi]:before,
-a.author[href$=CatmanIX]:before,
+a.author[href$=nekoningen]:before,
 a.author[href$=XelNaga]:before,
 a.author[href$=Catharsis25]:before,
 a.author[href$=tehz]:before,
@@ -1080,7 +1082,7 @@ a.author[href$=Generic_Builder]:before { content:"Genewic Bwuilda" }
 a.author[href$=volcano_bakemeats]:before { content:"Madam Le Bake" }
 a.author[href$=DaylightDarkle]:before { content:"Twilight Sparkle" }
 a.author[href$=Chillusion]:before { content:"Cchhiilllluussiioonn" }
-a.author[href$=Esplin]:before {content:"Power User"}
+a.author[href$=Esplin]:before {content:"Ence Arsplin"}
 a.author[href$=Jeroknite]:before {content:"JokerTine"; font-size:15px !important}
 a.author[href$=DarqWolff]:before { content:"[](/DarqWolff)" }
 a.author[href$=cheesemoo]:before { content:"Cheesemeow" }
@@ -1089,7 +1091,7 @@ a.author[href$=QdwachMD]:before { content:"Queen QdwacgMD II " }
 a.author[href$=SirCinnamon]:before { content:"KingCinnamon" }
 a.author[href$=BlockJuice_4]:before { content:"[deleted]"; color: rgb(136, 136, 136) !important; cursor: text !important }
 a.author[href$=Boibi]:before { content:"Dr. Boibi, M.D." }
-a.author[href$=CatmanIX]:before { content:"Scatman" }
+a.author[href$=nekoningen]:before { content:"Scatman" }
 a.author[href$=slippy0]:before { content:"emily" }
 a.author[href$=XelNaga]:before { content:"Twi`Naga" }
 a.author[href$=Catharsis25]:before { content:"Catharsis" }
@@ -1241,7 +1243,7 @@ a.author[href$="Swiftskii"]:after { content:" Be careful what you wish for" }
 
 /* Any pre/post-name flair stuff goes here */ 
 .tagline a.author[href="http://www.reddit.com/user/RainbowCrash"]:before,
-.tagline a.author[href="http://www.reddit.com/user/qwert426"]:before,
+.tagline a.author[href="http://www.reddit.com/user/245001"]:before,
 .tagline a.author[href="http://www.reddit.com/user/Orschmann"]:before,
 .tagline a.author[href="http://www.reddit.com/user/derram_2"]:after, 
 .tagline a.author[href="http://www.reddit.com/user/EvilHom3r"]:after,
@@ -1264,7 +1266,7 @@ a.author[href$="Swiftskii"]:after { content:" Be careful what you wish for" }
 /* Flour sack flair for anyone we've noticed that has flair disabled. Don't forget to add them above too.*/ 
 .tagline a.author[href="http://www.reddit.com/user/EvanMacIan"]:before,
 .tagline a.author[href="http://www.reddit.com/user/RainbowCrash"]:before,
-.tagline a.author[href="http://www.reddit.com/user/qwert426"]:before
+.tagline a.author[href="http://www.reddit.com/user/245001"]:before
 {
     background-position: 0px -540px;
 }
