--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -1312,6 +1312,7 @@ a.author[href$="/3holes2tits1fork"]:after {
     display: inline-block;
     width: 16px;
     height: 16px;
+text-indent:-9999px;
      }
 
 .flair-rainbowdash {
