--- a/source-css/pankakke.css
+++ b/source-css/pankakke.css
@@ -398,7 +398,7 @@ a[href|="/worldtrekka"] {
     }
 
 /***********MLP-XLRG*************/
-a[href|="/fearless"], a[href|="/doctorfun"], a[href|="/nsfz"], a[href|="/notsafeforzealot"] {
+a[href|="/fearless"], a[href|="/doctorfun"], a[href|="/nsfz"], a[href|="/notsafeforzealot"], a[href|="/wr3nch"] {
      display: block;
      clear: none;
      float: left;
@@ -423,6 +423,11 @@ a[href|="/notsafeforzealot"] {
      background-position: -469px -0px;
      width: 250px;
      height: 300px;
+     }
+a[href|="/wr3nch"] {
+     background-position: -719px -0px;
+     width: 105px;
+     height: 350px;
      }
 
 /************Mane-sub*************/
