--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -126,6 +126,45 @@ a[href|="/twiflutterhappy"], a[href|="/twishyhappy"] {
     height: 200px;
     background-image: url(%%twiflutterhappy%%)
     }
+a[href|="/flutterlove"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 300px;
+    height: 256px;
+    background-image: url(%%flutterlove%%)
+    }
+
+/* More Flutter emotes - with a new sheet! */
+
+a[href|="/shystar"], a[href|="/shysnowman"], a[href|="/tuneshy"], a[href|="/musicshy"], a[href|="/prettyshy"], a[href|="/fluttersmug"] {
+
+    display: block;
+    clear: none;
+    float: left;
+    height: 300px;
+    background-image: url(%%fluttersheet%%) !important
+    }
+a[href|="/shystar"] {
+    width: 244px;
+    background-position: -0px -0px 
+    }
+a[href|="/shysnowman"] {
+    width: 300px;
+    background-position: -244px -0px 
+    }
+a[href|="/tuneshy"], a[href|="/musicshy"] {
+    width: 362px;
+    background-position: -544px -0px 
+    }
+a[href|="/prettyshy"] {
+    width: 188px;
+    background-position: -906px -0px 
+    }
+a[href|="/fluttersmug"] {
+    width: 327px;
+    background-position: -1094px -0px 
+    }
 
 /* FinalFlutter emotes, full of cute! */
 
@@ -216,16 +255,15 @@ a[href|="/flutterhugs"] {
     height: 267px;
     background-image: url(%%flutterhugs%%)
     }
-a[href|="/flutterlove"] {
+a[href|="/fluttermane"], a[href|="/shymane"] {
     display: block;
     clear: none;
     float: left;
-    width: 300px;
-    height: 256px;
-    background-image: url(%%flutterlove%%)
+    width: 240px;
+    height: 200px;
+    background-image: url(%%shymane%%)
     }
-
-/* Wintery emotes - Only four at the moment- */
+/* Wintery emotes - Only four */
 
 
 
@@ -247,6 +285,16 @@ a[href|="/santashy"], a[href|="/wfs01"] { background-position: -0px -100px }
 a[href|="/sp"] {
     display: inline-block;
     padding-right: 100%
+    }
+/*DICKSDICKSDICKSDICKSDICKS*/
+
+a[href|="/kontanlovesyou"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 500px;
+    height: 300px;
+    background-image: url(%%whatamidoingiwithmylife%%)
     }
 
 /* Get rid of RES tags and vote weight on the modbox */
@@ -364,7 +412,7 @@ color: white !important;
 
 .footer-parent {
     height: 600px;
-    padding-bottom: 40px;
+    padding-bottom: 80px;
     clear: both;
     text-align: center;
     width: 800px;
@@ -598,3 +646,23 @@ background-position: -100px -600px;
 .usertext input[value$="9"] + .usertext-body a[href="/shy"] { 
 background-position: -200px -600px; 
   }
+
+/* Pretzel tests */
+
+/* 
+#siteTable_t3_10z012 a.author {
+    font-size: 0px !important;
+    display: inline-block;
+    vertical-align: bottom;
+    overflow: hidden;
+    letter-spacing: -20px;
+    }
+    
+
+.usertext input[value$="a"] + a.author:after, #siteTable_t3_10z012 {
+    content: "test";
+    font-size: 10px !important;
+    visibility: visible !important; 
+    display: block;
+    letter-spacing: normal;   
+} */
